--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
   </div>
     <div class="container">
       <% flash.each do |name, msg| %>
-        <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
+        <div class="alert-box alert-<%= name == :notice ? "success" : "error" %>">
           <a class="close" data-dismiss="alert">x</a>
           <%= msg %>
         </div>
